--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -47,7 +48,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <configuration>
+			         <source>1.8</source>
+			         <target>1.8</target>
+			    </configuration>
+			</plugin>
 		</plugins>
+		<resources>
+		   <resource>
+		      <directory>src/main/resources</directory>
+		   </resource>
+		</resources>
 	</build>
 
 
