--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "angular-confirmation-popover": "^4.2.0",
     "angular2-moment": "^1.9.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "ng-confirm": "^1.1.0",
     "ng2-slideable-directive": "^1.0.13",
@@ -36,9 +37,10 @@
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.22",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
