--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "angular-confirmation-popover": "^4.2.0",
     "angular2-moment": "^1.9.0",
     "core-js": "^2.5.4",
+    "intl": "^1.2.5",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "ng-confirm": "^1.1.0",
@@ -49,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.4",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
